<resources>
    <string name="app_name">MaterialLogin</string>
    <string name="login_success">login success</string>
    <string name="login">登录</string>
    <string name="Username">手机号</string>
    <string name="stu_or_tech_id">学号/工号</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码 ?</string>
    <string name="go">登录</string>
    <string name="repeat_password">确认密码</string>
    <string name="question">密保问题</string>
    <string name="answer">密保问题答案</string>
    <string name="next">注册</string>
    <string name="register">注册</string>

    <string name="action_settings">主页</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--密保问题-->
    <array name="question">
        <item>我的出生年月?</item>
        <item>我母亲的名字?</item>
        <item>我父亲的名字?</item>
        <item>我父亲的生日?</item>
        <item>我母亲的生日?</item>
    </array>
    <!--GCC-->
    <string-array name="spingarr">
        <item>第一周</item>
        <item>第二周</item>
        <item>第三周</item>
        <item>第四周</item>
        <item>第五周</item>
        <item>第六周</item>
        <item>第七周</item>
        <item>第八周</item>
        <item>第九周</item>
        <item>第十周</item>
    </string-array>
    <!--GCC-->

</resources>
