<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/float_transparent"
    tools:context="cn.fanrunqi.materiallogin.MainActivity">

    <FrameLayout
        android:layout_centerInParent="true"
        android:paddingTop="70dp"
        android:layout_width="320dp"
        android:layout_height="420dp">
        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            app:cardBackgroundColor="#2ea67f"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:orientation="vertical"
                    android:scrollbars="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <!--手机号-->
                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:paddingStart="50dp"
                            android:paddingEnd="30dp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp">
                            <android.support.design.widget.TextInputLayout
                                android:textColorHint="#f0f7f4"
                                android:layout_width="match_parent"
                                android:theme="@style/TextLabel"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_username"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/selector_bg_edit_2"
                                    android:hint="@string/Username"
                                    android:maxLength="11"
                                    android:inputType="number"
                                    android:paddingBottom="2dp"
                                    android:textColor="#f0f7f4"
                                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                    android:textSize="13sp" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                        <!--密保问题-->
                        <LinearLayout
                            android:paddingStart="50dp"
                            android:paddingEnd="30dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="40dp">
                            <android.support.design.widget.TextInputLayout

                                android:textColorHint="#f0f7f4"
                                android:theme="@style/TextLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                                <EditText
                                    android:textSize="13sp"
                                    android:textColor="#f0f7f4"
                                    android:hint="@string/question"
                                    android:id="@+id/et_question"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/selector_bg_edit_2"
                                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                    android:paddingBottom="0dp"
                                    />

                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                        <!--密保答案-->
                        <LinearLayout
                            android:paddingStart="50dp"
                            android:paddingEnd="30dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="40dp">
                            <android.support.design.widget.TextInputLayout

                                android:textColorHint="#f0f7f4"
                                android:theme="@style/TextLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:textSize="13sp"
                                    android:textColor="#f0f7f4"
                                    android:hint="@string/answer"
                                    android:id="@+id/et_answer"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/selector_bg_edit_2"
                                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                    android:paddingBottom="2dp"
                                    />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                    </LinearLayout>

                </ScrollView>

                <Button
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/bt_go"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/next"
                    android:textColor="#2fa881"
                    >
                </Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


</RelativeLayout>

